--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,5 +103,16 @@
     <string name="removeads_button">Remove Ads</string>
 
     <string name="title_activity_remove_ads">Remove Ads</string>
+    <string name="reservations">Reservations</string>
+    <string name="tasks">Tasks</string>
+    <string name="rooms">Rooms</string>
+    <string name="inventory">Inventory</string>
+    <string name="reports">Reports</string>
+    <string name="backup_restore">Backup/Restore</string>
+    <string name="remove_ads">Remove Ads</string>
+    <string name="settings">Settings</string>
+    <string name="new_string">New</string>
+    <string name="checked_in">Checked In</string>
+    <string name="historical">Historical</string>
 
 </resources>
