--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Resort Manager</string>
+    <string name="app_name">Hotel/Resort Manager</string>
     <string name="inventory_button">Inventory</string>
     <string name="tasks_button">Tasks</string>
     <string name="settings_button">Settings</string>
@@ -114,5 +114,7 @@
     <string name="new_string">New</string>
     <string name="checked_in">Checked In</string>
     <string name="historical">Historical</string>
+    <string name="backup">Backup</string>
+    <string name="restore">Restore</string>
 
 </resources>
